# rnc

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
.cargo/: config
.github/workflows/: check-build.yml  release.yml  rust.yml
crates/cli/: Cargo.toml  errors.rs  main.rs
crates/cli/src/: main.rs
crates/cli/tests/: cli-tests.rs
crates/newline-converter/: Cargo.toml  README.md  changelog.md
crates/newline-converter/benches/: bench.rs
crates/newline-converter/fuzz/: Cargo.toml
crates/newline-converter/fuzz/fuzz_targets/: dos2unix.rs  unix2dos.rs
crates/newline-converter/src/: converter.rs  lib.rs  utils.rs
src/: converter.rs  errors.rs  lib.rs  utils.rs
tests/: cli-tests.rs  lib-tests.rs
