[package]
name = "rnc"
version = "0.1.0"
authors = ["Michal Borejszo <michael.borejszo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Newline byte converter library"
repository = "https://github.com/spitfire05/rnc"
readme = "README.md"
keywords = ["newline", "linebreak", "conversion"]
categories = ["encoding", "command-line-utilities"]
include = [
    "src/*",
    "Cargo.toml"
]

[dependencies]
clap = "2.33.1"
content_inspector = "0.2.4"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"

[lib]
name = "rnc"
path = "src/lib.rs"

[[bin]]
name = "rnc"
path = "src/bin/main.rs"
