[package]
name = "newline_converter"
version = "0.1.0"
authors = ["Michal Borejszo <michael.borejszo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Newline byte converter library"
repository = "https://github.com/spitfire05/rnc"
readme = "README.md"
keywords = ["newline", "linebreak", "conversion"]
categories = ["encoding", "command-line-utilities"]
include = [
    "src/*",
    "Cargo.toml"
]

[[bin]]
name = "rnc"
required-features = ["cli"]

[features]
cli = ["clap", "content_inspector"]

[dependencies]
clap = { version = "2.33.1", optional = true }
content_inspector = { version = "0.2.4", optional = true }

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
escargot = "0.5"
