[package]
name = "rust-newline-converter-cli"
version = "0.1.2"
authors = ["Michal Borejszo <michael.borejszo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Newline byte converter library"
repository = "https://github.com/spitfire05/rnc"
readme = "../../README.md"
keywords = ["newline", "linebreak", "conversion"]
categories = ["encoding", "command-line-utilities"]

[[bin]]
name = "rnc"
path = "src/main.rs"

[dependencies]
newline-converter = { version = "0.3.0", path = "../newline-converter" }
clap = "2.33.1"
content_inspector = "0.2.4"
encoding = "0.2"
log = "0.4.8"
simplelog = "0.8.0"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
escargot = "0.5"
